Fix overflow bug, add class dash-html to dashboard

--- a/css/style.css
+++ b/css/style.css
@@ -1894,3 +1894,7 @@ footer .copyright h6 {
     margin-left: 8px;
   }
 }
+
+.dash-html {
+  overflow-x: hidden;
+}
